fixing styling changes in filters cleaning and collapsing

--- a/src/app/pages/documentos/search-documents/search-documents.component.scss
+++ b/src/app/pages/documentos/search-documents/search-documents.component.scss
@@ -5,7 +5,6 @@
 }
 
 
-
 .collapsa {
   display:flex;
   flex-flow:row wrap;
@@ -15,6 +14,17 @@
   right: 0.7rem;
   & > div {
     cursor:pointer;
+  }
+}
+
+
+.collapsaBox {
+  display:flex;
+  flex-flow:row wrap;
+  align-items:center;
+
+  p{
+    min-width:9rem;
   }
 }
 
@@ -38,7 +48,7 @@
 
 .clean_Filt {
   cursor:pointer;
-  margin-right:4rem;
+  margin-right: 2rem;
   display:flex;
   flex-flow:row wrap;
   align-items: center;
@@ -53,4 +63,3 @@
     }
   }
 }
-
